-------------------------------------------------------------------
Wed Oct 16 09:23:40 UTC 2013 - jsrain@suse.cz

- added possibility to show release notes button in dialog heading
  (fate#314695)

-------------------------------------------------------------------
Tue Aug  6 14:46:19 CEST 2013 - tgoettlicher@suse.de

- fixed dependencies
- Version 2.43.5

-------------------------------------------------------------------
Tue Jul 16 16:01:07 CEST 2013 - tgoettlicher@suse.de

- Fix build of libyui-qt-graph
- Version 2.43.4

-------------------------------------------------------------------
Fri May 10 10:40:00 UTC 2013 - bjoern.esser@gmail.com

- use a common toplevel CMakeLists.txt
- fix building *-doc pkgs
- introduce bootstrap.sh
- Version 2.43.3

-------------------------------------------------------------------
Mon May  6 13:30:00 UTC 2013 - bjoern.esser@gmail.com

- fix build issues
- Version 2.43.2

-------------------------------------------------------------------
Mon May  6 11:52:13 UTC 2013 - bjoern.esser@gmail.com

- use SONAME from libyui instead of VERSION.cmake
- Version 2.43.1

-------------------------------------------------------------------
Fri Jan 18 15:19:26 CET 2013 - anaselli@linux.it

- fixed to use new YSettings, theme path can be set by program 

-------------------------------------------------------------------
Mon Jan  4 15:48:13 CET 2013 - tgoettlicher@suse.de

- fixed bnc #801311: read locale directory from YSettings
- Version 2.42.5

-------------------------------------------------------------------
Mon Dec 17 11:51:33 CET 2012 - tgoettlicher@suse.de

- fixed bnc #793893: storage graph in yast missing
- Version 2.42.3

-------------------------------------------------------------------
Fri Nov 23 23:05:52 CET 2012 - anaselli@linux.it

- changed to calendar popup instead using spin
-------------------------------------------------------------------

Fri Nov  2 20:34:52 CET 2012 - anaselli@linux.it
