@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Mon Nov 11 12:06:24 UTC 2013 - jsrain@suse.cz
+
+- Added handling of release notes using UI-independent handler
+  (fate#314695)
+
+-------------------------------------------------------------------
 Wed Oct 16 09:23:40 UTC 2013 - jsrain@suse.cz
 
 - added possibility to show release notes button in dialog heading
